Work on `package.sh`
Signed-off-by: Daniel Danis <daniel.danis@jax.org>